SVG <by>: add missed </li>

--- a/files/en-us/web/svg/attribute/by/index.html
+++ b/files/en-us/web/svg/attribute/by/index.html
@@ -15,7 +15,7 @@ browser-compat: svg.elements.animate.by
 <p>You can use this attribute with the following SVG elements:</p>
 
 <ul>
-  <li>{{SVGElement("animate")}}
+  <li>{{SVGElement("animate")}}</li>
   <li>{{SVGElement("animateColor")}}</li>
   <li>{{SVGElement("animateMotion")}}</li>
   <li>{{SVGElement("animateTransform")}}</li>
