--- a/files/en-us/web/svg/attribute/viewbox/index.html
+++ b/files/en-us/web/svg/attribute/viewbox/index.html
@@ -16,9 +16,9 @@ tags:
 <ul>
   <li>{{SVGElement("marker")}}</li>
   <li>{{SVGElement("pattern")}}</li>
-  <li>{{ SVGElement("svg") }}</li>
-  <li>{{ SVGElement("symbol") }}</li>
-  <li>{{ SVGElement("view") }}.</li>
+  <li>{{SVGElement("svg")}}</li>
+  <li>{{SVGElement("symbol")}}</li>
+  <li>{{SVGElement("view")}}</li>
 </ul>
 
 <div id="topExample">
