--- a/files/en-us/mozilla/firefox/releases/92/index.html
+++ b/files/en-us/mozilla/firefox/releases/92/index.html
@@ -7,17 +7,15 @@ tags:
   - Mozilla
   - Release
 ---
-<p>{{FirefoxSidebar}}{{draft}}</p>
+<p>{{FirefoxSidebar}}</p>
 
-<p class="summary">This article provides information about the changes in Firefox 92 that will affect developers. Firefox 92 is the current <a href="https://www.mozilla.org/en-US/firefox/channel/desktop/#beta">Beta version of Firefox</a>, and will ship on <a href="https://wiki.mozilla.org/RapidRelease/Calendar#Future_branch_dates">September 7, 2021</a>.</p>
+<p class="summary">This article provides information about the changes in Firefox 92 that will affect developers. Firefox 92 is was released on September 7, 2021.</p>
 
 <h2 id="Changes_for_web_developers">Changes for web developers</h2>
 
-<h3 id="Developer_Tools">Developer Tools</h3>
-
 <h3 id="HTML">HTML</h3>
 
-<h4 id="removals_html">Removals</h4>
+<p>No changes</p>
 
 <h3 id="CSS">CSS</h3>
 
@@ -29,25 +27,12 @@ tags:
   <li>The <code>system-ui</code> value is now supported for the {{cssxref("font-family")}} property ({{bug(1226042)}}).</li>
 </ul>
 
-<h4 id="removals_css">Removals</h4>
-
 <h3 id="JavaScript">JavaScript</h3>
 
 <ul>
-  <li>Access to audio output devices, like speakers and headphones, is now protected by the <a href="speaker-selection">speaker-selection</a> feature policy ({{bug(1577199)}}).</li>
   <li>{{jsxref("Object.hasOwn()")}} can be used to test whether a property was defined on an object or inherited ({{bug(1721149)}}).</li>
 </ul>
 
-
-<h4 id="removals_js">Removals</h4>
-
-<h3 id="HTTP">HTTP</h3>
-
-<h4 id="removals_http">Removals</h4>
-
-<h3 id="Security">Security</h3>
-
-<h4 id="removals_sec">Removals</h4>
 
 <h3 id="APIs">APIs</h3>
 
@@ -58,23 +43,23 @@ tags:
 <h4 id="DOM">DOM</h4>
 
 <ul>
+  <li>The <a href="/en-US/docs/Web/API/HTMLSlotElement">Imperative Slotting API</a> (part of the <a href="/en-US/docs/Web/Web_Components/Using_shadow_DOM">Shadow Dom API</a>) Has been implemented. ({{bug(1705141)}})</li>
   <li>You can now monitor for changes to text selections in {{HTMLElement("input")}} or {{HTMLElement("textarea")}} by listening for <code>selectionchange</code> events in {{domxref("HTMLInputElement.selectionchange_event", "HTMLInputElement")}} and {{domxref("HTMLTextAreaElement/selectionchange_event", "HTMLTextAreaElement")}}, respectively ({{bug(1648944)}}).</li>
 </ul>
 
 <h4 id="Media_WebRTC_and_Web_Audio">Media, WebRTC, and Web Audio</h4>
 
-<h4 id="removals_media">Removals</h4>
+<ul>
+  <li>Access to audio output devices, like speakers and headphones, is now protected by the <a href="speaker-selection">speaker-selection</a> feature policy ({{bug(1577199)}}).</li>
+</ul>
 
-<h3 id="WebAssembly">WebAssembly</h3>
-
-<h4 id="removals_wasm">Removals</h4>
 
 <h3 id="webdriver_conformance_marionette">WebDriver conformance (Marionette)</h3>
+
 <ul>
   <li>Improved support for the <code>webSocketUrl</code> capability, which now returns the WebDriver BiDi websocket URL if <code>true</code> was passed and if BiDi is supported. ({{bug(1692984)}}).</li>
 </ul>
 
-<h4 id="removals_webdriver">Removals</h4>
 
 <h2 id="Changes_for_add-on_developers">Changes for add-on developers</h2>
 
@@ -82,7 +67,6 @@ tags:
   <li>Support for <code>cookieStoreId</code> is added to {{WebExtAPIRef('downloads.download')}}, {{WebExtAPIRef('downloads.DownloadQuery')}}, and {{WebExtAPIRef('downloads.DownloadItem')}}. The addition to the types {{WebExtAPIRef('downloads.DownloadQuery')}} and {{WebExtAPIRef('downloads.DownloadItem')}} provides support in {{WebExtAPIRef('downloads.search')}} and {{WebExtAPIRef('downloads.erase')}}. Web extensions can now associate downloads with specific cookie stores, such as container tabs (<a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/Work_with_contextual_identities">contextual identities</a>). ({{bug(1669566)}})</li>
 </ul>
 
-<h4 id="removals_webext">Removals</h4>
 
 <h2 id="Older_versions">Older versions</h2>
 
