--- a/files/en-us/mozilla/firefox/releases/93/index.html
+++ b/files/en-us/mozilla/firefox/releases/93/index.html
@@ -47,6 +47,7 @@ tags:
 
 <ul>
   <li>{{domxref("ElementInternals.shadowRoot")}} is now supported ({{bug(1723521)}}).</li>
+  <li>The value <code>device-pixel-content-box</code> is now supported for {{domxref("ResizeObserver.Observe()")}} ({{bug(1587973)}}).</li>
 </ul>
 
 <h4 id="DOM">DOM</h4>
