--- a/files/en-us/learn/server-side/first_steps/client-server_overview/index.html
+++ b/files/en-us/learn/server-side/first_steps/client-server_overview/index.html
@@ -201,7 +201,7 @@ Content-Length: 0
 </pre>
 
 <div class="note">
-<p><strong>Note</strong>: The HTTP responses and requests shown in these examples were captured using the <a href="https://www.telerik.com/download/fiddler">Fiddler</a> application, but you can get similar information using web sniffers (e.g. <a href="https://websniffer.cc/">Websniffer</a>) or packet analyzer like <a href="https://www.wireshark.org/">Wireshark</a>. You can try this yourself. Use any of the linked tools, and then navigate through a site and edit profile information to see the different requests and responses. Most modern browsers also have tools that monitor network requests (for example, the <a href="/en-US/docs/Tools/Network_Monitor">Network Monitor</a> tool in Firefox).</p>
+<p><strong>Note</strong>: The HTTP responses and requests shown in these examples were captured using the <a href="https://www.telerik.com/download/fiddler">Fiddler</a> application, but you can get similar information using web sniffers (e.g. <a href="https://websniffer.cc/">Websniffer</a>) or packet analyzers like <a href="https://www.wireshark.org/">Wireshark</a>. You can try this yourself. Use any of the linked tools, and then navigate through a site and edit profile information to see the different requests and responses. Most modern browsers also have tools that monitor network requests (for example, the <a href="/en-US/docs/Tools/Network_Monitor">Network Monitor</a> tool in Firefox).</p>
 </div>
 
 <h2 id="Static_sites">Static sites</h2>
