Link for establishing a WebDriver BiDi connection.

--- a/files/en-us/web/webdriver/capabilities/websocketurl/index.html
+++ b/files/en-us/web/webdriver/capabilities/websocketurl/index.html
@@ -29,4 +29,5 @@ Response:
 <ul>
  <li><a href="/en-US/docs/Web/WebDriver/Capabilities">List of WebDriver capabilities</a></li>
  <li><a href="/en-US/docs/Web/WebDriver/Commands/NewSession">New Session</a> command</li>
+ <li><a href="https://w3c.github.io/webdriver-bidi/#establishing">Establishing a WebDriver BiDi connection</a></li>
 </ul>
