--- a/files/en-us/web/svg/attribute/fill/index.html
+++ b/files/en-us/web/svg/attribute/fill/index.html
@@ -447,7 +447,7 @@ browser-compat: svg.attributes.presentation.fill
    <td>{{SpecName("SVG2", "painting.html#FillProperty", "fill")}}</td>
    <td>{{Spec2("SVG2")}}</td>
    <td>Definition for shapes and texts.<br>
-    Adds <code style="white-space: nowrap;">context-fill</code> and <code style="white-space: nowrap;">context-stroke</code>.</td>
+    Adds <code>context-fill</code> and <code>context-stroke</code>.</td>
   </tr>
   <tr>
    <td>{{SpecName("SVG1.1", "animate.html#FillAttribute", "fill")}}</td>
@@ -466,4 +466,4 @@ browser-compat: svg.attributes.presentation.fill
 
 <p>{{Compat}}</p>
 
-<p class="note"><strong>Note:</strong> For information on using the <code style="white-space: nowrap;">context-fill</code> (and <code style="white-space: nowrap;">context-stroke</code>) values from HTML documents, see the documentation for the non-standard <span style="white-space: nowrap;">{{cssxref("-moz-context-properties")}}</span> property.</p>
+<p class="note"><strong>Note:</strong> For information on using the <code>context-fill</code> (and <code>context-stroke</code>) values from HTML documents, see the documentation for the non-standard {{cssxref("-moz-context-properties")}} property.</p>
