--- a/files/en-us/web/svg/attribute/stroke/index.html
+++ b/files/en-us/web/svg/attribute/stroke/index.html
@@ -89,7 +89,7 @@ browser-compat: svg.attributes.presentation.stroke
    <td>{{SpecName("SVG2", "painting.html#StrokeProperty", "stroke")}}</td>
    <td>{{Spec2("SVG2")}}</td>
    <td>Definition for shapes and texts.<br>
-    Adds <code style="white-space: nowrap;">context-fill</code> and <code style="white-space: nowrap;">context-stroke</code>.</td>
+    Adds <code>context-fill</code> and <code>context-stroke</code>.</td>
   </tr>
   <tr>
    <td>{{SpecName("SVG1.1", "painting.html#StrokeProperty", "stroke")}}</td>
@@ -103,4 +103,4 @@ browser-compat: svg.attributes.presentation.stroke
 
 <p>{{Compat}}</p>
 
-<p class="note"><strong>Note:</strong> For information on using the <code style="white-space: nowrap;">context-stroke</code> (and <code style="white-space: nowrap;">context-fill</code>) values from HTML documents, see the documentation for the non-standard <span style="white-space: nowrap;">{{cssxref("-moz-context-properties")}}</span> property.</p>
+<p class="note"><strong>Note:</strong> For information on using the <code>context-stroke</code> (and <code>context-fill</code>) values from HTML documents, see the documentation for the non-standard {{cssxref("-moz-context-properties")}} property.</p>
