--- a/files/en-us/web/svg/tutorial/basic_shapes/index.html
+++ b/files/en-us/web/svg/tutorial/basic_shapes/index.html
@@ -12,9 +12,11 @@ tags:
 
 <h2 id="Basic_shapes">Basic shapes</h2>
 
-<p>To insert a shape, you create an element in the document. Different elements correspond to different shapes and take different parameters to describe the size and position of those shapes. Some are slightly redundant in that they can be created by other shapes, but they're all there for your convenience and to keep your SVG documents as short and as readable as possible. All the basic shapes are shown in the image to the right. The code to generate that looks something like:</p>
+<p>To insert a shape, you create an element in the document. Different elements correspond to different shapes and take different parameters to describe the size and position of those shapes. Some are slightly redundant in that they can be created by other shapes, but they're all there for your convenience and to keep your SVG documents as short and as readable as possible. All the basic shapes are shown in the following image.</p>
 
-<p><img alt="" class="internal" src="shapes.png" style="float: right;"></p>
+<p><img alt="" class="internal" src="shapes.png"></p>
+
+<p>The code to generate that image looks something like this:</p>
 
 <pre class="brush:xml">&lt;?xml version="1.0" standalone="no"?&gt;
 &lt;svg width="200" height="250" version="1.1" xmlns="http://www.w3.org/2000/svg"&gt;
