--- a/files/en-us/web/svg/attribute/d/index.html
+++ b/files/en-us/web/svg/attribute/d/index.html
@@ -646,7 +646,7 @@ tags:
 <p>{{EmbedLiveSample('ClosePath', '100%', 200)}}</p>
 
 <div class="notecard note">
-  <p><strong>Note:</strong> As a <a href="/en-US/docs/Web/SVG/Attribute/Presentation#attr-d">presentation attribute</a> <code>d</code> can be used as a CSS property</p>
+  <p><strong>Note:</strong> As a <a href="/en-US/docs/Web/SVG/Attribute/Presentation">presentation attribute</a> <code>d</code> can be used as a CSS property</p>
 </div>
 
 <h2 id="Specifications">Specifications</h2>
